2005-04-28  Gareth Owen  <gowen@gnome.org>

	* configure.in: Added Italian (it) to ALL_LINGUAS.

	* src/nautilus-open-terminal.c: Fix "Open in Terminal" menuitem
	tooltip for currently open folder.

2005-04-21  Gareth Owen  <gowen@gnome.org>

	* configure.in: Added "en_GB" to ALL_LINGUAS.

2005-04-01  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-15  Takeshi AIHANA <aihana@gnome.gr.jp>

	* configure.in: Added "ja" (Japanese) to ALL_LINGUAS.

2005-03-14  Josep Puigdemont  <josep@imatge-sintetica.com>

	* configure.in: Added "ca" to ALL_LINGUAS.

2005-03-05  Amanpreet Singh Alam  <amanpreetalam@yahoo.com>

	* configure.in: Add "pa.po" to ALL_LINGUAS.

2005-03-05  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "zh_TW" to ALL_LINGUAS.

2005-03-04  Christian Neumair  <chris@gnome-de.org>

	* configure.in: Require gnome-desktop 2.9.91, since we depend on
	gnome_desktop_item_set_launch_time.

	* src/nautilus-open-terminal.c: Fix up menuitem creation.

	* *: Release.

2005-02-28  Alexander Shopov  <ash@contact.bg>

	* configure.in: Added "bg" (Bulgarian) to ALL_LINGUAS

2005-02-25  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* configure.in: Added Danish (da) to ALL_LINGUAS.

2005-02-25  Danilo Šegan  <dsegan@gmx.net>

	* configure.in (ALL_LINGUAS): Added "sr" and "sr@Latn".

2005-02-24  Dennis Cranston  <dennis_cranston@yahoo.com>
	
	* configure.in:  Add check for libgnome-desktop.  
	Remove check for startup-notification.
	
	* src/Makefile.am:  Add libgnome-desktop. 
	Remove startup-notification.
		
	* src/nautilus-open-terminal.c:  Use gnome-desktop-item api
	to launch gnome-terminal.
	
2005-02-24  Raphael Higino  <raphaelh@cvs.gnome.org>

	* configure.in: Added pt_BR to ALL_LINGUAS.

2005-02-24  Tommi Vainikainen  <thv@iki.fi>

	* configure.in (ALL_LINGUAS): Added fi.

2005-02-24  Marcel Telka  <marcel@telka.sk>

	* configure.in (ALL_LINGUAS): Added sk.

2005-02-23  Christian Rose  <menthos@menthos.com>
