@@ -11,7 +11,7 @@ AM_CONFIG_HEADER(config.h)
 
 NAUTILUS_REQUIRED=2.6.0
 EEL_REQUIRED=2.6.0
-LIBGNOME_DESKTOP_REQUIRED=2.9.91
+LIBGNOME_DESKTOP_REQUIRED=2.10.2
 GLIB_REQUIRED=2.4.0
 
 AC_PROG_CC
