@@ -1,3 +1,11 @@
+2005-05-09  Dennis Cranston  <dennis_cranston@yahoo.com>
+	
+	* configure.in:  Add check for libgnome-desktop 2.10.2.
+		
+	* src/nautilus-open-terminal.c:  Remove lookup_in_data_dir() and
+	lookup_in_data_dirs(). Use new gnome_desktop_item_new_from_basename() 
+	function to launch gnome-terminal.
+
 2005-04-28  Gareth Owen  <gowen@gnome.org>
 
 	* configure.in: Added Italian (it) to ALL_LINGUAS.
